testdata/baselines/reference/compiler/jsExportsImportedIntoTsxLosesTypeInfo.errors.txt
src/main.tsx(5,19): error TS2322: Type 'unknown' is not assignable to type 'null'.
src/main.tsx(7,2): error TS2604: JSX element type 'C2' does not have any construct or call signatures.
src/main.tsx(9,9): error TS2339: Property 'value' does not exist on type 'unknown'.


==== node_modules/react/index.d.ts (0 errors) ====
    export = React;
    export as namespace React;
    declare namespace React {
        type Key = string | number;
        interface RefObject<T> {
            current: T | null;
        }
        type Ref<T> = ((instance: T | null) => void) | RefObject<T> | null;
        interface Attributes {
            key?: Key | null;
        }
        interface RefAttributes<T> extends Attributes {
            ref?: Ref<T>;
        }
        type PropsWithoutRef<P> = Pick<P, Exclude<keyof P, "ref">>;
        interface ReactElement<P = any> {
            type: any;
            props: P;
            key: Key | null;
        }
        type ReactNode = ReactElement | string | number | null | undefined | boolean;
        interface FunctionComponent<P = {}> {
            (props: P): ReactElement | null;
        }
        type FC<P = {}> = FunctionComponent<P>;
        interface ComponentClass<P = {}> {
            new (props: P): Component<P>;
        }
        type ComponentType<P = {}> = ComponentClass<P> | FunctionComponent<P>;
        class Component<P = {}, S = {}> {
            props: Readonly<P>;
            state: Readonly<S>;
            constructor(props: P);
            render(): ReactNode;
        }
        interface ForwardRefExoticComponent<P> {
            (props: P): ReactElement | null;
        }
        interface ForwardRefRenderFunction<T, P = {}> {
            (props: P, ref: Ref<T>): ReactElement | null;
        }
        function forwardRef<T, P = {}>(
            render: ForwardRefRenderFunction<T, P>,
        ): ForwardRefExoticComponent<PropsWithoutRef<P> & RefAttributes<T>>;
        interface Context<T> {
            Provider: FC<{ value: T; children?: ReactNode }>;
            Consumer: FC<{ children: (value: T) => ReactNode }>;
        }
        function createContext<T>(defaultValue: T): Context<T>;
        function useRef<T>(initialValue: T | null): RefObject<T>;
        function useContext<T>(context: Context<T>): T;
    }
    
==== node_modules/redux/index.d.ts (0 errors) ====
    export function compose(): <R>(a: R) => R;
    export function compose<F extends Function>(f: F): F;
    export function compose<A, B, C>(f1: (b: B) => C, f2: (a: A) => B): (a: A) => C;
    export function compose<A, B, C, D>(
        f1: (c: C) => D,
        f2: (b: B) => C,
        f3: (a: A) => B,
    ): (a: A) => D;
    export function compose<R>(f1: (a: any) => R, ...funcs: Function[]): (...args: any[]) => R;
    export function compose<R>(...funcs: Function[]): (...args: any[]) => R;
    
==== node_modules/react-redux/index.d.ts (0 errors) ====
    import * as React from "react";
    export interface InferableComponentEnhancer {
        <P>(component: React.ComponentType<P>): React.ComponentType<P>;
    }
    export function connect(): InferableComponentEnhancer;
    
==== src/lib.js (0 errors) ====
    import React from 'react';
    import { compose } from 'redux';
    import { connect } from 'react-redux';
    
    /** @type {React.FC<{ domRef: unknown }>} */
    let C0 = () => null;
    
    export const C1 = React.forwardRef((props, ref) => <C0 domRef={ref} {...props} />);
    
    export const C2 = compose(connect(), hoc())(C1);
    
    // @ts-ignore
    export const C3 = React.createContext();
    
    function hoc() {
        // @ts-ignore
        return (Component) => {
            return class extends React.Component {
                /** @override */
                render() {
                    return <Component {...this.props} />;
                }
            };
        };
    }
    
==== src/main.tsx (3 errors) ====
    import React from 'react';
    import { C1, C2, C3 } from './lib.js';
    
    const track = React.useRef(null);
    <C1 ref={(e) => { track.current = e; }} />;
                      ~~~~~~~~~~~~~
!!! error TS2322: Type 'unknown' is not assignable to type 'null'.
    
    <C2 />;
     ~~
!!! error TS2604: JSX element type 'C2' does not have any construct or call signatures.
    
    const { value } = React.useContext(C3);
            ~~~~~
!!! error TS2339: Property 'value' does not exist on type 'unknown'.
    